# jetson_nano

./: CMakeLists.txt  imgui.ini  lenia_params_1748054592.txt  lenia_params_1748158767.txt  lenia_params_1748190300.txt  lenia_params_1748200174.txt  lenia_params_1748203868.txt  lenia_params_1748224188.txt  lenia_params_1748229643.txt  lenia_params_1748313559.txt  lenia_params_1748555331.txt  lenia_params_1748556068.txt  lenia_params_1748574457.txt  lenia_params_1748697304.txt  lenia_params_1748715101.txt  lenia_params_1748757185.txt  lenia_params_1748759967.txt  lenia_params_1748807527.txt  lenia_params_1748876914.txt  lenia_params_1748920785.txt  lenia_params_1748927445.txt
snapshots/: lenia_params_1748136658.txt  lenia_params_1748168421.txt  lenia_params_1748197230.txt  lenia_params_1748224188.txt  lenia_params_1748224738.txt  lenia_params_1748227720.txt  lenia_params_1748583929.txt  lenia_params_1748737529.txt  lenia_params_1748755353.txt  lenia_params_1748794936.txt  lenia_params_1748829465.txt  lenia_params_1748839797.txt  lenia_params_1748843009.txt  lenia_params_1748909493.txt  lenia_params_1748934047.txt  lenia_params_1748946122.txt  lenia_params_1749003905.txt  lenia_params_1749065926.txt  lenia_params_1749067916.txt  lenia_params_1749088676.txt  lenia_params_1749091664.txt  lenia_params_2025-06-05_00-07-46.txt  lenia_params_2025-06-05_00-25-02.txt  lenia_params_2025-06-05_00-45-22.txt  lenia_params_2025-06-05_01-12-37.txt  lenia_params_2025-06-05_01-16-46.txt  lenia_params_2025-06-06_20-38-25.txt  lenia_params_LENIAS.txt
src/: CUDAHandler.cu  CUDAHandler.h  GLManager.cpp  GLManager.h  UI.cpp  UI.h  cuda_utils.h  lenia.cpp  lenia.h  main.cpp  monitor_utils.cpp  monitor_utils.h  my_vectors.h  vectors.h
